lang/NomosParser.py
# Generated from Nomos.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class NomosParser ( Parser ):

    grammarFileName = "Nomos.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'import '", "'german_credit'", "'compas'", 
                     "'mnist'", "'speech_command'", "'hotel_review'", "'lunar'", 
                     "'bipedal'", "'.'", "'v'", "'x'", "'s'", "'d'", "'o'", 
                     "'f'", "'pos'", "'neg'", "<INVALID>", "'input'", "'output'", 
                     "'var'", "'requires'", "'ensures'", "'+'", "'-'", "'*'", 
                     "'/'", "<INVALID>", "<INVALID>", "'\"\"'", "'{'", "'}'", 
                     "'['", "']'", "'('", "')'", "'<'", "'<='", "'>'", "'>='", 
                     "'=='", "'!='", "'&&'", "'||'", "'!'", "'==>'", "':='", 
                     "','", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "PROGRAM", "INPUT", "OUTPUT", 
                      "VARKW", "REQUIRES", "ENSURES", "PLUS", "MINUS", "MULT", 
                      "DIV", "NUM", "FUNC", "EMPTYSTR", "LCBR", "RCBR", 
                      "LSBR", "RSBR", "LBR", "RBR", "LSS", "LSQ", "GRT", 
                      "GRQ", "EQL", "NEQ", "AND", "OR", "NOT", "IMPL", "ASS", 
                      "COMMA", "SEMICOLON", "WS", "COMMENT", "LINE_COMMENT" ]

    RULE_spec = 0
    RULE_import_ = 1
    RULE_input_ = 2
    RULE_output = 3
    RULE_vars_ = 4
    RULE_program = 5
    RULE_assignment = 6
    RULE_precondition = 7
    RULE_postcondition = 8
    RULE_expr = 9
    RULE_record = 10
    RULE_math = 11
    RULE_funcParam = 12
    RULE_cmpOp = 13
    RULE_commonvar = 14
    RULE_inpvar = 15
    RULE_outvar = 16
    RULE_feature = 17

    ruleNames =  [ "spec", "import_", "input_", "output", "vars_", "program", 
                   "assignment", "precondition", "postcondition", "expr", 
                   "record", "math", "funcParam", "cmpOp", "commonvar", 
                   "inpvar", "outvar", "feature" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    PROGRAM=18
    INPUT=19
    OUTPUT=20
    VARKW=21
    REQUIRES=22
    ENSURES=23
    PLUS=24
    MINUS=25
    MULT=26
    DIV=27
    NUM=28
    FUNC=29
    EMPTYSTR=30
    LCBR=31
    RCBR=32
    LSBR=33
    RSBR=34
    LBR=35
    RBR=36
    LSS=37
    LSQ=38
    GRT=39
    GRQ=40
    EQL=41
    NEQ=42
    AND=43
    OR=44
    NOT=45
    IMPL=46
    ASS=47
    COMMA=48
    SEMICOLON=49
    WS=50
    COMMENT=51
    LINE_COMMENT=52

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SpecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def import_(self):
            return self.getTypedRuleContext(NomosParser.Import_Context,0)


        def program(self):
            return self.getTypedRuleContext(NomosParser.ProgramContext,0)


        def input_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NomosParser.Input_Context)
            else:
                return self.getTypedRuleContext(NomosParser.Input_Context,i)


        def vars_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NomosParser.Vars_Context)
            else:
                return self.getTypedRuleContext(NomosParser.Vars_Context,i)


        def precondition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NomosParser.PreconditionContext)
            else:
                return self.getTypedRuleContext(NomosParser.PreconditionContext,i)


        def output(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NomosParser.OutputContext)
            else:
                return self.getTypedRuleContext(NomosParser.OutputContext,i)


        def postcondition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NomosParser.PostconditionContext)
            else:
                return self.getTypedRuleContext(NomosParser.PostconditionContext,i)


        def getRuleIndex(self):
            return NomosParser.RULE_spec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpec" ):
                listener.enterSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpec" ):
                listener.exitSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpec" ):
                return visitor.visitSpec(self)
            else:
                return visitor.visitChildren(self)




    def spec(self):

        localctx = NomosParser.SpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_spec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.import_()
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==NomosParser.INPUT:
                self.state = 37
                self.input_()
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==NomosParser.VARKW:
                self.state = 43
                self.vars_()
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==NomosParser.REQUIRES:
                self.state = 49
                self.precondition()
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==NomosParser.OUTPUT:
                self.state = 55
                self.output()
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 61
            self.program()
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==NomosParser.ENSURES:
                self.state = 62
                self.postcondition()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Import_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.dataset = None # Token

        def SEMICOLON(self):
            return self.getToken(NomosParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return NomosParser.RULE_import_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImport_" ):
                listener.enterImport_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImport_" ):
                listener.exitImport_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImport_" ):
                return visitor.visitImport_(self)
            else:
                return visitor.visitChildren(self)




    def import_(self):

        localctx = NomosParser.Import_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_import_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(NomosParser.T__0)
            self.state = 69
            localctx.dataset = self._input.LT(1)
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << NomosParser.T__1) | (1 << NomosParser.T__2) | (1 << NomosParser.T__3) | (1 << NomosParser.T__4) | (1 << NomosParser.T__5) | (1 << NomosParser.T__6) | (1 << NomosParser.T__7))) != 0)):
                localctx.dataset = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 70
            self.match(NomosParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Input_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.inp = None # InpvarContext

        def INPUT(self):
            return self.getToken(NomosParser.INPUT, 0)

        def SEMICOLON(self):
            return self.getToken(NomosParser.SEMICOLON, 0)

        def inpvar(self):
            return self.getTypedRuleContext(NomosParser.InpvarContext,0)


        def getRuleIndex(self):
            return NomosParser.RULE_input_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInput_" ):
                listener.enterInput_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInput_" ):
                listener.exitInput_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInput_" ):
                return visitor.visitInput_(self)
            else:
                return visitor.visitChildren(self)




    def input_(self):

        localctx = NomosParser.Input_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_input_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(NomosParser.INPUT)
            self.state = 73
            localctx.inp = self.inpvar()
            self.state = 74
            self.match(NomosParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OutputContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.out = None # OutvarContext

        def OUTPUT(self):
            return self.getToken(NomosParser.OUTPUT, 0)

        def SEMICOLON(self):
            return self.getToken(NomosParser.SEMICOLON, 0)

        def outvar(self):
            return self.getTypedRuleContext(NomosParser.OutvarContext,0)


        def getRuleIndex(self):
            return NomosParser.RULE_output

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutput" ):
                listener.enterOutput(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutput" ):
                listener.exitOutput(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOutput" ):
                return visitor.visitOutput(self)
            else:
                return visitor.visitChildren(self)




    def output(self):

        localctx = NomosParser.OutputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_output)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(NomosParser.OUTPUT)
            self.state = 77
            localctx.out = self.outvar()
            self.state = 78
            self.match(NomosParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vars_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARKW(self):
            return self.getToken(NomosParser.VARKW, 0)

        def assignment(self):
            return self.getTypedRuleContext(NomosParser.AssignmentContext,0)


        def SEMICOLON(self):
            return self.getToken(NomosParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return NomosParser.RULE_vars_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars_" ):
                listener.enterVars_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars_" ):
                listener.exitVars_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVars_" ):
                return visitor.visitVars_(self)
            else:
                return visitor.visitChildren(self)




    def vars_(self):

        localctx = NomosParser.Vars_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vars_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(NomosParser.VARKW)
            self.state = 81
            self.assignment()
            self.state = 82
            self.match(NomosParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.prog = None # Token

        def PROGRAM(self):
            return self.getToken(NomosParser.PROGRAM, 0)

        def getRuleIndex(self):
            return NomosParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = NomosParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            localctx.prog = self.match(NomosParser.PROGRAM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # RecordContext
            self.right_rec = None # RecordContext
            self.right_math = None # MathContext

        def ASS(self):
            return self.getToken(NomosParser.ASS, 0)

        def record(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NomosParser.RecordContext)
            else:
                return self.getTypedRuleContext(NomosParser.RecordContext,i)


        def math(self):
            return self.getTypedRuleContext(NomosParser.MathContext,0)


        def getRuleIndex(self):
            return NomosParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = NomosParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignment)
        try:
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                localctx.left = self.record()
                self.state = 87
                self.match(NomosParser.ASS)
                self.state = 88
                localctx.right_rec = self.record()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                localctx.left = self.record()
                self.state = 91
                self.match(NomosParser.ASS)
                self.state = 92
                localctx.right_math = self.math(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PreconditionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REQUIRES(self):
            return self.getToken(NomosParser.REQUIRES, 0)

        def expr(self):
            return self.getTypedRuleContext(NomosParser.ExprContext,0)


        def SEMICOLON(self):
            return self.getToken(NomosParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return NomosParser.RULE_precondition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrecondition" ):
                listener.enterPrecondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrecondition" ):
                listener.exitPrecondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrecondition" ):
                return visitor.visitPrecondition(self)
            else:
                return visitor.visitChildren(self)




    def precondition(self):

        localctx = NomosParser.PreconditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_precondition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(NomosParser.REQUIRES)
            self.state = 97
            self.expr(0)
            self.state = 98
            self.match(NomosParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PostconditionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENSURES(self):
            return self.getToken(NomosParser.ENSURES, 0)

        def expr(self):
            return self.getTypedRuleContext(NomosParser.ExprContext,0)


        def SEMICOLON(self):
            return self.getToken(NomosParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return NomosParser.RULE_postcondition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPostcondition" ):
                listener.enterPostcondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPostcondition" ):
                listener.exitPostcondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPostcondition" ):
                return visitor.visitPostcondition(self)
            else:
                return visitor.visitChildren(self)




    def postcondition(self):

        localctx = NomosParser.PostconditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_postcondition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(NomosParser.ENSURES)
            self.state = 101
            self.expr(0)
            self.state = 102
            self.match(NomosParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return NomosParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ExprNotContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NomosParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(NomosParser.NOT, 0)
        def expr(self):
            return self.getTypedRuleContext(NomosParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprNot" ):
                listener.enterExprNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprNot" ):
                listener.exitExprNot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprNot" ):
                return visitor.visitExprNot(self)
            else:
                return visitor.visitChildren(self)


    class ExprBinaryContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NomosParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NomosParser.ExprContext)
            else:
                return self.getTypedRuleContext(NomosParser.ExprContext,i)

        def AND(self):
            return self.getToken(NomosParser.AND, 0)
        def OR(self):
            return self.getToken(NomosParser.OR, 0)
        def IMPL(self):
            return self.getToken(NomosParser.IMPL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprBinary" ):
                listener.enterExprBinary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprBinary" ):
                listener.exitExprBinary(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprBinary" ):
                return visitor.visitExprBinary(self)
            else:
                return visitor.visitChildren(self)


    class ExprPredContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NomosParser.ExprContext
            super().__init__(parser)
            self.left = None # RecordContext
            self.op = None # CmpOpContext
            self.right = None # RecordContext
            self.copyFrom(ctx)

        def record(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NomosParser.RecordContext)
            else:
                return self.getTypedRuleContext(NomosParser.RecordContext,i)

        def cmpOp(self):
            return self.getTypedRuleContext(NomosParser.CmpOpContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprPred" ):
                listener.enterExprPred(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprPred" ):
                listener.exitExprPred(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprPred" ):
                return visitor.visitExprPred(self)
            else:
                return visitor.visitChildren(self)


    class ExprPrnContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NomosParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LBR(self):
            return self.getToken(NomosParser.LBR, 0)
        def expr(self):
            return self.getTypedRuleContext(NomosParser.ExprContext,0)

        def RBR(self):
            return self.getToken(NomosParser.RBR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprPrn" ):
                listener.enterExprPrn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprPrn" ):
                listener.exitExprPrn(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprPrn" ):
                return visitor.visitExprPrn(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = NomosParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [NomosParser.NOT]:
                localctx = NomosParser.ExprNotContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 105
                self.match(NomosParser.NOT)
                self.state = 106
                self.expr(4)
                pass
            elif token in [NomosParser.LBR]:
                localctx = NomosParser.ExprPrnContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 107
                self.match(NomosParser.LBR)
                self.state = 108
                self.expr(0)
                self.state = 109
                self.match(NomosParser.RBR)
                pass
            elif token in [NomosParser.T__9, NomosParser.T__10, NomosParser.T__11, NomosParser.T__12, NomosParser.T__13, NomosParser.T__14, NomosParser.T__15, NomosParser.T__16, NomosParser.NUM, NomosParser.FUNC, NomosParser.EMPTYSTR]:
                localctx = NomosParser.ExprPredContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 111
                localctx.left = self.record()
                self.state = 112
                localctx.op = self.cmpOp()
                self.state = 113
                localctx.right = self.record()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 122
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = NomosParser.ExprBinaryContext(self, NomosParser.ExprContext(self, _parentctx, _parentState))
                    localctx.left = _prevctx
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 117
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 118
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << NomosParser.AND) | (1 << NomosParser.OR) | (1 << NomosParser.IMPL))) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 119
                    localctx.right = self.expr(3) 
                self.state = 124
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class RecordContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return NomosParser.RULE_record

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class RecFuncContext(RecordContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NomosParser.RecordContext
            super().__init__(parser)
            self.func = None # Token
            self.params = None # FuncParamContext
            self.copyFrom(ctx)

        def LBR(self):
            return self.getToken(NomosParser.LBR, 0)
        def RBR(self):
            return self.getToken(NomosParser.RBR, 0)
        def FUNC(self):
            return self.getToken(NomosParser.FUNC, 0)
        def funcParam(self):
            return self.getTypedRuleContext(NomosParser.FuncParamContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRecFunc" ):
                listener.enterRecFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRecFunc" ):
                listener.exitRecFunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRecFunc" ):
                return visitor.visitRecFunc(self)
            else:
                return visitor.visitChildren(self)


    class RecVarContext(RecordContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NomosParser.RecordContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def inpvar(self):
            return self.getTypedRuleContext(NomosParser.InpvarContext,0)

        def outvar(self):
            return self.getTypedRuleContext(NomosParser.OutvarContext,0)

        def commonvar(self):
            return self.getTypedRuleContext(NomosParser.CommonvarContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRecVar" ):
                listener.enterRecVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRecVar" ):
                listener.exitRecVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRecVar" ):
                return visitor.visitRecVar(self)
            else:
                return visitor.visitChildren(self)


    class RecFtrContext(RecordContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NomosParser.RecordContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def feature(self):
            return self.getTypedRuleContext(NomosParser.FeatureContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRecFtr" ):
                listener.enterRecFtr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRecFtr" ):
                listener.exitRecFtr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRecFtr" ):
                return visitor.visitRecFtr(self)
            else:
                return visitor.visitChildren(self)


    class RecNumContext(RecordContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a NomosParser.RecordContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUM(self):
            return self.getToken(NomosParser.NUM, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRecNum" ):
                listener.enterRecNum(self)
